재번역 요청을 백그라운드 작업으로 전환
